[package]
name = "mobc-arangors"
version = "0.2.0"
authors = ["Rafael Aggeler <r.aggeler@gmx.net>"]
license = "MIT"
description = "ArangoDB support for the async mobc connection pool"
repository = "https://github.com/inzanez/mobc-arangors"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arangors = "0.3"
mobc = "0.5.10"
futures = "0.3"

[dev-dependencies]
tokio = { version = "0.2.21", features = ["full"] }
